<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NarwhalNotifier!</string>
    <string name="app_name">Narwhal Notifier</string>
    <string name="frequency_label">Polling frequency, in minutes:</string>
    <string name="account_label">Account Details</string>
    <string name="username_label">Username: </string>
    <string name="username_hint">Username</string>
    <string name="password_label">Password: </string>
    <string name="options_label">Options</string>
    <string name="check_label">Update me on:</string>
    <string name="mod_label">My subreddits:</string>
    <string name="mod_sublabel">Subreddits you moderate, comma-separated</string>
    <string name="subHint">subreddit1,subreddit2,subreddit3&#8230;</string>
    <string name="messages">Messages</string>
    <string name="modmail">Modmail</string>
    <string name="modqueue">Mod Queue</string>
    <string name="save">Save</string>
    <string name="logout">Log Out</string>
    <string-array name="frequency_array">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45 </item>
        <item>60</item>
    </string-array>

</resources>